--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "better-sqlite3": "^12.6.2",
     "date-fns": "^4.1.0",
     "electron-squirrel-startup": "^1.0.1",
+    "express": "^5.2.1",
     "lucide-react": "^0.564.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
